--- a/src/html/pages/product-items.html
+++ b/src/html/pages/product-items.html
@@ -10,7 +10,8 @@
 <body>
    <include src="includes/header.html"></include>
    <include src="components/top.html"></include>
-   <include src="components/items.html"></include>
+   <include src="items/04-01.html"></include>
+   <include src="includes/footer.html"></include>
 
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
    <script src="js/libs.min.js"></script>
