--- a/src/html/items/04-03.html
+++ b/src/html/items/04-03.html
@@ -54,7 +54,11 @@
                 role="tabpanel" 
                 aria-labelledby="description" 
                 aria-hidden="false">
-             <p>Трехфазные сухие трансформаторы с литой изоляцией типа ТСЛ мощностью 630кВА и класса напряжения до 10кВ предназначены для преобразования электрической энергии в электросетях трехфазного переменного тока частотой 50 Гц. Устанавливаются в промышленных помещениях и общественных зданиях, к которым предъявляют повышенные требования в части пожаробезопасности, взрывозащищенности, экологической чистоты. Обмотки низшего напряжения изготавливаются из алюминиевой фольги с изоляцией из стеклотканевого препрега. Обмотки высшего напряжения заливаются эпоксидной смолой в вакуумзаливочной машине. Против перегрева трансформаторы защищены тепловой защитой, встроенной в обмотку низшего напряжения и выведенной на клеммы теплового реле. Регулирование напряжения до ±5% ступенями по 2,5%. ПБВ (переключение без возбуждения) путем перестановки перемычек.</p>
+             <p>УЭРМ - Устройства этажные распределительные модульного типа серии “УЭРМ” предназначены для приема, распределения и учета электроэнергии, защиты аппаратов устройств, отходящих линий от перегрузок и токов короткого замыкания в сетях с глухо-заземлённой нейтралью трехфазного и однофазного переменного тока напряжением 380/220В, частотой 50 Гц, а также для размещения устройств телефонных, радиотрансляционных, телевизионных сетей, интернет сетей и оборудования автоматической системы контроля учёта электроэнергии (АСКУЭ).
+
+               Также УЭРМ применяется для защиты от поражения электрическим током при случайном прикосновении к токоведущим или нетоковедущим частям электрооборудования, оказавшимся под напряжением вследствие повреждения изоляции токоведущих частей, защиты от сверхтоков на вводе в квартиру.
+               
+               УЭРМ предназначен для предотвращения возникновения пожаров от электрического тока, вызванных воспламенением изоляции проводов из-за чрезмерно больших токов нагрузки потребителей, путем непрерывного контроля тока утечки.</p>
            </div>
        </li>
      
