--- a/src/html/items/04-06.html
+++ b/src/html/items/04-06.html
@@ -54,7 +54,7 @@
                 role="tabpanel" 
                 aria-labelledby="description" 
                 aria-hidden="false">
-             <p>Трехфазные сухие трансформаторы с литой изоляцией типа ТСЛ мощностью 630кВА и класса напряжения до 10кВ предназначены для преобразования электрической энергии в электросетях трехфазного переменного тока частотой 50 Гц. Устанавливаются в промышленных помещениях и общественных зданиях, к которым предъявляют повышенные требования в части пожаробезопасности, взрывозащищенности, экологической чистоты. Обмотки низшего напряжения изготавливаются из алюминиевой фольги с изоляцией из стеклотканевого препрега. Обмотки высшего напряжения заливаются эпоксидной смолой в вакуумзаливочной машине. Против перегрева трансформаторы защищены тепловой защитой, встроенной в обмотку низшего напряжения и выведенной на клеммы теплового реле. Регулирование напряжения до ±5% ступенями по 2,5%. ПБВ (переключение без возбуждения) путем перестановки перемычек.</p>
+             <p> Шкафы освещения и распределения, предназначены для ручного, автоматического и дистанционного управления исполнительными устройствами и визуального контроля за режимами их работы. Собственное производство шкафов управления и комплектация лучшими образцами репейной и микроконтроллерной техники позволяет оборудовать полнофункциональный шкаф для любых задач и обеспечивать каждый шкаф гарантийным и послегарантийным обслуживанием.</p>
            </div>
        </li>
      
