--- a/src/html/items/04-07.html
+++ b/src/html/items/04-07.html
@@ -40,7 +40,7 @@
               </div>
               <div class="col-sm-6 col-xs-12">
                   
-   <h2>ШОС ElCube<span></span></h2>
+   <h2>ЩСН ElCube<span></span></h2>
    <ul class="tabs" role="tablist">
        <li>
            <input type="radio" name="tabs" id="tab1" checked />
@@ -54,7 +54,7 @@
                 role="tabpanel" 
                 aria-labelledby="description" 
                 aria-hidden="false">
-             <p>Шкафы освещения и распределения Шкафы освещения и распределения, предназначены для ручного, автоматического и дистанционного управления исполнительными устройствами и визуального контроля за режимами их работы. Собственное производство шкафов управления и комплектация лучшими образцами репейной и микроконтроллерной техники позволяет оборудовать полнофункциональный шкаф для любых задач и обеспечивать каждый шкаф гарантийным и послегарантийным обслуживанием.</p>
+             <p>ЩСН - предназначены для ввода и распределения электроэнергии 0,4 кВ 50 Гц для питания потребителей собственных нужд энергообъектов (электроподстанции 35 - 750 кВ, электростанции, промышленные предприятия и другие). ЩСН 0,4 кВ разрабатываются и изготавливаются в соответствии с современными требованиями по однолинейным схемам Заказчика с учетом требований по безопасности обслуживания. ЩСН обеспечивают надежное питание потребителей собственных нужд переменного тока напряжением 0,4 кВ, осуществляют селективную защиту вводов и отходящих фидеров, обеспечивают автоматическое переключение питания (АВР) потребителей по схеме явного или неявного резервирования.</p>
            </div>
        </li>
      
