--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elcube</title> 
+    <title>Document</title> 
     <link rel="stylesheet" href="css/main.min.css">
+
+
 </head>
 <body>
     <include src="includes/preloader.html"></include>
