--- a/src/html/pages/product-05.html
+++ b/src/html/pages/product-05.html
@@ -25,7 +25,7 @@
                </div>
                <div class="product__block-item">
                   <div class="product__block-image">
-                     <img src="../images/items/4-0.2.jpg" alt="">
+                     <img src="../images/0.4.jpg" alt="">
                   </div>
                   <h3>Сухие 20-10/0,4кВ</h3>
                   <a href="" class="product__block-btn">Подробнее</a>
